refact and add new enpoints
