# backend/internal/catalog/dto.go
@@ -1,0 +1,12 @@
+package catalog
+
+import "app/internal/core"
+
+type ColorResponse struct {
+	core.AbstractNameModelResponce
+	Color string `json:"color"`
+}
+
+type CategoryResponse struct {
+	core.AbstractNameModelResponce
+}
